--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
             </ul>
         </nav>
         <article>
-            
+            article
         </article>
         <footer>
-            
+            <i>Copyright &copy; 2016</i>
+            <br>
+            <b>By IMC</b>
         </footer>
     </body>
 </html>
